Fix LaTeX syntax and ampersands in resume

--- a/resume.tex
+++ b/resume.tex
@@ -32,13 +32,13 @@
     {\Huge \textbf{Akshat Grover}} \\
     \vspace{6pt}
     Bhopal, India $|$ \href{https://github.com/singh199908}{github.com/singh199908} \\
-    \href{mailto:your.email@example.com}{your.email@example.com} $|$ +91-XXXXXXXXXX
+    \href{mailto:your.email@example.com}{akshatgrover02@gmail.com} $|$ +91-6392104804
 \end{center}
 
 % Education
 \section{Education}
 \textbf{Vellore Institute of Technology (VIT)}, Bhopal \hfill 2023 -- 2027 \\
-\textit{Bachelor of Technology (B.Tech)} \hfill Current GPA: X.X/10.0
+\textit{Bachelor of Technology (B.Tech)} 
 
 % Skills
 \section{Technical Skills}
@@ -55,15 +55,15 @@
 
 \textbf{Osdag IFC Wrapper (FOSSEE Contribution)} \hfill \textit{Feb 2026}
 \begin{itemize}
-    \item Engineered a custom **IFC Exporter** for Osdag (Steel Design Software) using **PythonOCC**.
-    \item Implemented a robust geometry pipeline to translate 3D B-Rep (Boundary Representation) models into BIM-compatible **IFC4** files.
+    \item Engineered a custom \textbf{IFC Exporter} for Osdag (Steel Design Software) using \textbf{PythonOCC}.
+    \item Implemented a robust geometry pipeline to translate 3D B-Rep (Boundary Representation) models into BIM-compatible \textbf{IFC4} files.
     \item Developed an automated triangulation engine using \textit{BRepMesh} to ensure cross-platform visibility in BIM viewers (BIMvision, Revit).
     \item Simplified complex topological data into semantic BIM entities, enabling structural interoperability.
 \end{itemize}
 
 \textbf{VIT Crowd Detection \& Amber Alert (CROWD\_AMBER\_v3)} \hfill \textit{Python, OpenCV}
 \begin{itemize}
-    \item Built an end-to-end intelligent safety system for campus environments using **Computer Vision**.
+    \item Built an end-to-end intelligent safety system for campus environments using \textbf{Computer Vision}.
     \item Leveraged OpenCV for real-time crowd density estimation and automated alert triggering.
     \item Integrated an Amber Alert notification system for rapid response to safety incidents.
     \item Open-sourced the project under the MIT license, emphasizing community safety technology.
@@ -75,13 +75,13 @@
     \item Optimized for lightweight performance in local environments, showcasing modular software design.
 \end{itemize}
 
-\textbf{VITcoin (Blockchain & Fintech Innovation)} \hfill \textit{Shell, JavaScript}
+\textbf{VITcoin (Blockchain \& Fintech Innovation)} \hfill \textit{Shell, JavaScript}
 \begin{itemize}
     \item Experimented with decentralized ledger concepts tailored for campus-wide digital transactions.
     \item Developed a proof-of-concept for digital currency management using efficient shell-based logic.
 \end{itemize}
 
-\textbf{sin-s-script (Advanced Automation & Security)} \hfill \textit{HTML, Python, Ngrok}
+\textbf{sin-s-script (Advanced Automation \& Security)} \hfill \textit{HTML, Python, Ngrok}
 \begin{itemize}
     \item Created a high-level automation tool utilizing Web APIs, Ngrok, and Shell scripts for remote system monitoring.
     \item Demonstrated deep understanding of networking protocols, location services, and credential security.
